	  module.
	* gm2/gm2-libs-iso/WholeStr.mod:  finished implementation
	  module.
	* gm2/gm2-libs-iso/WholeIO.mod:  finished implementation
	  module.
	* gm2/Make-lang.in:  added WholeConv.mod, WholeStr.mod
	  and WholeIO.mod to the list of ISO modules to be built
	  and installed.
	* gm2/gm2-libs-iso/README.texi:  updated list of completed
	  modules.

2008-11-11       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  modified add_default_directories
	  to use a default_library_path.  lang_specific_driver
	  sets the default_library_path to getenv LIBRARY_PATH
	  or failing that to the LIBSUBDIR as determined by
	  configure.

2008-11-10       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/README.texi:  added RndFile
	  to the list of completed implementation modules.
	  Removed duplicate StreamFile.
	* gm2/gm2-libs-iso/RndFile.def:  tidied up comments.
	  Set FilePosSize to SIZE(LONGINT) and
	  FilePos = LONGINT.
	* gm2/gm2-libs-iso/Storage.mod:  tidied up spaces.
	* gm2/tools-src/makeversion:  added gm2_version
	  prototype.
	* gm2/gm2-libs-iso/RndFile.mod:  new file.

2008-11-08       Gaius Mulley <gaius@gnu.org>

	* gm2/ChangeLog:  
	* gm2/examples/svga/DisplayBuffer.def:  tidied up
	  spacing.
	* gm2/examples/svga/Matrix3D.def:  tidied up
	  spacing.
	* gm2/examples/svga/Matrix3D.mod:  tidied up
	  spacing.
	* gm2/examples/svga/Transform.def:  tidied up
	  spacing.
	* gm2/gm2-compiler/SymbolTable.mod:  introduced
	  test to make it more robust in the face of
	  erroneous code.

2008-11-08       Michael Lambert <lambert@psc.edu>

        * testsuite/gm2/iso/pass/realbitscast.mod:  added test
	  against __LP64__.
	* testsuite/gm2/cpp/pass/subaddr.mod:  added test
	  against __LP64__.

2008-11-07       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  new rules to make gm2version.c
	  and M2Version.mod.  New rule to compile gm2version.c
	  and modified link of xgm2 to include gm2version.o
	* gm2/gm2.texi:  removed entry to h2def.texi.